# world_only_line

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  point.frag  point.vert  sample.cpp  sample_env.cpp  setup.py  world_only_line.cpp
inc/: Bar.h  Constraint.h  Env.h  LineBody.h  Object.h  Shape.h  Window.h  World.h
